# fileviewer

./: .travis.yml  LICENSE  README.md  stack.yaml
app/: CREDITS  app.cabal
app/src/: AppState.hs  Files.hs  Main.hs  Utils.hs
